--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>webpack</title>
-    <script src="analitics.js"></script>
+    <script src="analitics.bundle.js"></script>
 
 </head>
 <body>
 <div class="container">
     <h1>Webpack cource</h1>
+    <hr>
+    <div class="logo"></div>
 </div>
-<script src="Post.js"></script>
-<script src="index.js"></script>
+
+
+<script src="main.bundle.js"></script>
 </body>
 </html>
