--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>webpack</title>
-    <script src="analitics.bundle.js"></script>
+    <link rel="icon" href="favicon.ico" type="image/ico">
 
 </head>
 <body>
@@ -11,9 +11,10 @@
     <h1>Webpack cource</h1>
     <hr>
     <div class="logo"></div>
+    <hr>
+    <pre></pre>
 </div>
 
 
-<script src="main.bundle.js"></script>
 </body>
 </html>
