--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>webpack</title>
-    <link rel="icon" href="favicon.ico" type="image/ico">
-
+  <meta charset="UTF-8">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="icon" href="favicon.ico" type="image/ico">
+  <title>Webpack</title>
 </head>
 <body>
-<div class="container">
-    <h1>Webpack cource</h1>
-    <hr>
-    <div class="logo"></div>
-    <hr>
-    <pre></pre>
-</div>
 
+  <div id="app"></div>
 
 </body>
 </html>
